opam-version: "2.0"
maintainer: "talex5@gmail.com"
authors: [ "Thomas Leonard" ]
license: "ISC"
homepage: "https://github.com/mirage/mirage-logs"
dev-repo: "git+https://github.com/mirage/mirage-logs.git"
bug-reports: "https://github.com/mirage/mirage-logs/issues"
doc: "https://mirage.github.io/mirage-logs/"
tags: ["org:mirage"]
depends: [
  "ocaml" { >= "4.06.0"}
  "dune" {>= "3.0"}
  "logs" { >= "0.5.0" }
  "ptime" { >= "0.8.1" }
  "mirage-clock" { >= "3.0.0"}
  "lwt" {with-test}
  "alcotest" {with-test}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
synopsis: "A reporter for the Logs library that writes log messages to stderr, using a Mirage `CLOCK` to add timestamps"
description: """
The Logs reporter prefixes each entry with a timestamp, and writes it to stderr.
"""
